# courseworkHSE

./: CMakeLists.txt  README.md
cpp/: .gitignore  CMakeLists.txt  cleanup  cleanup.cpp  cleanup_final  cleanup_final.cpp  config.json
cpp/TgBot/: bot.cpp  bot.hpp  keyboard.cpp  keyboard.hpp  main.cpp
cpp/src/: config.cpp  config.hpp  game_manager.cpp  game_manager.hpp  user_state.hpp
python/: .gitignore  Dockerfile  README.md  requirements.txt  run.py  run_game.py  visualize.py
python/agents/: __init__.py  base_agent.py  heuristic_agent.py  qlearning_agent.py  random_agent.py
python/game/: __init__.py  board.py  engine.py  rules.py
python/tests/: __init__.py  test_agents.py  test_board.py  test_game_flow.py  test_reproducibility.py
python/visualization/: __init__.py  board_visualizer.py  renderer.py
src/TgBot/: bot.hpp  keyboard.cpp  keyboard.hpp  main.cpp
